--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1644,4 +1644,17 @@ $dark-block-2: #2B2C2E;
         background-color: #0D0D0D;
         border-color: #181818;
     }
+    .bridge-body-cover .data-connect-cover .connect-card-outer .id-add-block .id-add-wrapper .id-copy-btn img{
+        filter: grayscale(1) invert(1);        
+    }
+    .bridge-body-cover .data-connect-cover .connect-card-outer .id-add-block .id-add-wrapper {
+        border: 1px solid #181818;
+    }
+    .bridge-body-cover .data-connect-cover .connect-card-outer .id-add-block .id-add-wrapper .id-copy-btn {
+        background-color: #0D0D0D;
+        border-left: solid 1px #181818;
+    }
+    .bridge-body-cover .data-connect-cover .connect-card-outer .id-add-block .id-add-wrapper .id-inp-block .id-inp{
+        color: #fff;
+    }
 }
