--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -1071,7 +1071,7 @@
     filter: grayscale(1) invert(1); }
   .theme-dark .passcode-bridge .passcode-content-block {
     background-color: #000;
-    border: 1px solid #181818; }
+    border: 1px solid #2c2c2c; }
   .theme-dark .passcode-bridge .passcode-content-block .form-block .inp-block .form-control {
     background-color: #0D0D0D;
     border-color: #484848;
