--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1617,7 +1617,7 @@ $dark-block-2: #2B2C2E;
     }
     .passcode-bridge .passcode-content-block{
         background-color: #000;
-        border: 1px solid #181818;
+        border: 1px solid #2c2c2c;
     }
     .passcode-bridge .passcode-content-block .form-block .inp-block .form-control{
         background-color: #0D0D0D;
